-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.1
-
Mac OS X, Yosemite
-
-
50ce5a68301dee2fd00b7c6ccc615257a2353098
Similar to QTBUG-43257, but I still have a similar issue with 5.4.1.
I've attached an example.
When the application doesn't have the focus (e.g. my Qt application is behind another application) right clicking on it will quickly show the context menu, then close it.
I've attached a small example project to reproduce the problem.
It will immediately return from QMenu::exec
If the application has the focus, it is working as expected.
For Gerrit Dashboard: QTBUG-45015 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
109582,2 | Cocoa: Handle the event passed into the global monitor correctly | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |